--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -1,3 +1,67 @@
 .landing {
-  background-color: lightskyblue;
+  background-color: white;
+  display: flex;
+
+  .left {
+    flex: 0.5;
+    overflow: hidden;
+
+    .imgContainer {
+      width: 700px;
+      height: 700px;
+      background-color: rgb(247,148,29);
+      border-radius: 50%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      float: right;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+  .right {
+    flex: 0.5;
+  
+    .wrapper{
+      width: 100%;
+      height: 100%;
+      padding-left: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      h1{
+        font-size: 60px;
+        margin: 10px 0;
+      }
+      h2{
+        font-size: 35px;
+      }
+      h3{
+        font-size: 30px;
+      }
+
+    }
+    a{
+      position: absolute;
+      bottom: 10px;
+      left: 40%;
+
+      .fas{
+        width: 30px;
+        color: #130e0e;
+        animation: arrowBlink 1s infinite;
+      }
+
+      @keyframes arrowBlink {
+        100%{
+          opacity: 0;
+        }
+      }
+
+
+    }
+  }
 }
