--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,6 +6,9 @@
   background-color: white;
   color: $main-color;
   position: fixed;
+  top: 0;
+  z-index: 3;
+  transition: all 1s ease;
 
   .wrapper {
     padding: 10px 30px;
@@ -30,11 +33,6 @@
         align-self: center;
         margin-left: 30px;
 
-        icon{
-          font-style: 18px;
-          margin-right: 5px;
-        }
-
         span{
           font-style: 15px;
           font-weight: 400;
@@ -48,11 +46,36 @@
         height: 25px;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
 
         span{
           height: 3px;
           width: 100%;
           background-color: $main-color;
+          transform-origin: left;
+          transition: all 2s ease-in;
+        }
+      }
+    }
+  }
+
+  &.active {
+    background-color: $main-color;
+    color: white;
+
+    .harmburger {
+      span {
+        &:first-child {
+          border-color: white;
+          transform: rotate(45deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:last-child{
+          background-color: white;
+          transform: rotate(-45deg);
         }
       }
     }
