--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -41,6 +41,24 @@
       }
       h3{
         font-size: 30px;
+
+        span{
+          font-size: inherit;
+          color: rgb(247,148,29);
+        }
+        .ityped-cursor{
+          animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+          50%{
+            opacity: 1;
+          }
+          100%{
+            opacity: 0;
+          }
+          
+        }
       }
 
     }
