--- a/src/components/Proj/Proj.scss
+++ b/src/components/Proj/Proj.scss
@@ -1,3 +1,73 @@
-.project {
-  background-color: lightcoral;
+.projects {
+  background-color: rgb(247,148,29);
+  display: flex;
+  align-items: center;
+  justify-content: content;
+
+  .slider{
+    height: 350px;
+    display: flex;
+    position: absolute;
+    left: 0;
+
+    .container {
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .item{
+        width: 700px;
+        height: 100%;
+        background-color: white;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .left{
+          flex: 6;
+          height: 80%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          .leftContainer {
+            width: 90%;
+            height: 70%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .imgContainer{
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              background-color:rgb(255, 202, 136);
+              display: flex;
+              align-items: center;
+              align-content: center;
+
+              img{
+                width: 25px;
+              }
+            }
+          }
+          
+        }
+        .right{
+          flex: 6;
+          height: 100%;
+          background-color: rgb(247,148,29);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+
+        }
+      }
+    }
+  }
+
+  
 }
