--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -1,3 +1,33 @@
-.blog {
-  background-color: mediumpurple;
+.item {
+  width: 220px;
+  height: 150px;
+  border-radius: 10px;
+  border: 1px solid lightgrey;
+  margin: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  transition: all 5s ease-in;
+  transition: all 2s ease-out;
+
+  h3{
+    position: absolute;
+    font-size: 20px;
+    color: white;
+  }
+
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+  }
+  &:hover{
+    background-color: black;
+    img{
+      opacity: 0.4;
+      z-index: 0;
+    }
+  }
 }
