--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,3 +1,65 @@
 .contact {
-  background-color: lightblue;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+
+  .left{
+    flex: 1;
+    overflow: hidden;
+  }
+  img{
+    height: 100%;
+  }
+  .right{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    h2{
+      font-size: 30px;
+    }
+
+    form{
+      width: 70%;
+      height: 70%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+
+
+      input{
+        width: 300px;
+        height: 30px;
+        font-size: 14px;
+      }
+
+      textarea {
+        width: 300px;
+        height: 200px;
+        font-size: 14px;
+
+      }
+      button {
+        width: 150px;
+        height: 30px;
+        color: whitesmoke;
+        background: rgb(247,148,29);
+        border: none;
+        border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
+
+        &:hover{
+          transform: scale(1.1);
+          transition: all 1s ease;
+        }
+
+        &:focus{
+          outline: one;
+        }
+      }
+    }
+  }
 }
