--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -7,17 +7,21 @@
     overflow: hidden;
 
     .imgContainer {
-      width: 700px;
-      height: 700px;
+      margin-top: 20px;
+      width: 650px;
+      height: 650px;
       background-color: rgb(247,148,29);
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
       justify-content: center;
       float: right;
+      z-index: 0;
 
       img {
-        width: 100%;
+        width: 70%;
+        z-index: 1;
+        overflow: visible;
       }
     }
   }
@@ -35,6 +39,7 @@
       h1{
         font-size: 60px;
         margin: 10px 0;
+        font-weight: 800;
       }
       h2{
         font-size: 35px;
