--- a/src/components/Proj/Proj.scss
+++ b/src/components/Proj/Proj.scss
@@ -3,12 +3,31 @@
   display: flex;
   align-items: center;
   justify-content: content;
+  position: relative;
+
+  .fas {
+    height: 70px;
+    position: absolute;
+    cursor: pointer;
+    color: black;
+
+
+    &.left{
+      left: 100px;
+    }
+    &.right{
+      right: 100px;
+    }
+    
+
+  }
 
   .slider{
     height: 350px;
     display: flex;
     position: absolute;
     left: 0;
+    transition: all 1s ease-out;
 
     .container {
       width: 100vw;
@@ -26,7 +45,7 @@
         justify-content: center;
 
         .left{
-          flex: 6;
+          flex: 5;
           height: 80%;
           display: flex;
           align-items: center;
@@ -53,16 +72,38 @@
               }
             }
           }
+
+          .lin {
+            margin-left: 10px;
+          }
+
+          a{
+            text-decoration: none;
+            text-decoration: none;
+            color: black;
+
+            .links {
+              display: flex;
+              flex-direction: row;
+              
+            }
+          }
+
+          
           
         }
         .right{
-          flex: 6;
+          flex: 8;
           height: 100%;
           background-color: rgb(247,148,29);
           display: flex;
           align-items: center;
           justify-content: center;
-
+            img{
+              width: auto;
+              height: 350px;
+              // transform: rotate(-10deg);
+            }
 
         }
       }
