--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -1,6 +1,7 @@
 @import '../../global.scss';
 
 .portfolio{
+  margin-top: 4rem;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -8,6 +9,10 @@
 
   h1{
     font-size: 50px;
+
+    @include mobile{
+      font-size: 17px;
+    }
   }
 
   ul{
@@ -16,6 +21,12 @@
     list-style: none;
     display: flex;
 
+    @include mobile{
+      margin: 10px 0;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
   }
   .container {
     width: 70%;
@@ -23,6 +34,10 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+
+    @include mobile{
+      width: 100%;
+    }
 
     .item {
       width: 220px;
@@ -36,6 +51,11 @@
       position: relative;
       transition: all 5s ease-in;
       transition: all 2s ease-out;
+
+      @include mobile{
+        width: 110px;
+        height: 70px;
+      }
 
       h3{
         position: absolute;
