--- a/src/components/Testimonials/Testimonials.scss
+++ b/src/components/Testimonials/Testimonials.scss
@@ -1,11 +1,23 @@
+@import '../../global.scss';
+
 .testimonials {
   background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 3rem;
+
+  @include mobile{
+    justify-content: space-around;
+  }
 
   h1{
     font-size: 30px;
+
+    @include mobile{
+      font-size: 20px;
+
+    }
   }
 
   .container {
@@ -14,6 +26,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include mobile{
+      flex-direction: column;
+      height: 100%;
+
+    }
 
     .card{
       width: 250px;
@@ -26,10 +44,27 @@
       padding: 20px;
       transition: all 1s ease;
 
+      @include mobile{
+        height: 150px;
+        margin: 10px 0;
+      }
+
       &.featured {
         width: 300px;
         height: 75%;
         margin: 0 30px;
+        
+        @include mobile{
+          width: 250px;
+          height: 180px;
+          margin: 1px;
+
+        }
+
+        
+        @include mobile{
+          width: 240px;
+        }
       }
 
       &:hover {
@@ -53,6 +88,11 @@
             border-radius: 50%;
             object-fit: cover;
             margin: 0 30px;
+
+            @include mobile{
+              width: 30px;
+              height: 30px;
+            }
           }
         }
       }
@@ -61,6 +101,11 @@
         padding: 10px;
         border-radius: 10px;
         background-color: burlywood;
+
+        @include mobile{
+          font-size: 10px;
+          padding: 5px;
+        }
       }
       .bottom{
         display: flex;
@@ -70,9 +115,17 @@
       }
       h3{
         margin-bottom: 5px;
+
+        @include mobile{
+          font-size: 10px;
+        }
       }
       h4{
         color: burlywood;
+
+        @include mobile{
+          font-size: 7px;
+        }
       }
     }
 
