--- a/src/global.scss
+++ b/src/global.scss
@@ -1,1 +1,9 @@
-$main-color: rgb(0,0,0);
+$main-color: rgb(5, 77, 97);
+
+$width: 800px;
+
+@mixin mobile {
+  @media (max-width: #{$width}) {
+    @content
+  }
+}
