--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -5,7 +5,6 @@
   display: flex;
 
   @include mobile{
-    margin-top: 3rem;
     flex-direction: column;
 
   }
@@ -16,6 +15,12 @@
   }
   img{
     height: 100%;
+    
+    @include mobile {
+      margin-top: 4rem;
+    }
+
+    
   }
   .right{
     flex: 1;
@@ -46,9 +51,9 @@
 
         
         @include mobile{
-          width: 200px;
-          height: 20px;
+          display: none;
         }
+
       }
 
       textarea {
@@ -57,26 +62,47 @@
         font-size: 14px;
 
         @include mobile{
-          width: 200px;
-          height: 100%;
-          margin: 1rem;
+          display: none;
         }
 
+      }
+      a{
+        text-decoration: none;
+      
+      }
+      .btn{
+        visibility: hidden;
+        justify-content: center;
+        align-items: center;
+        padding: 1.1rem;
+        color: whitesmoke;
+        background: $secondary-color;
+        border: none;
+        cursor: pointer;
+
+        @include mobile {
+            visibility: visible;
+        }
       }
       button {
         width: 150px;
         height: 30px;
         color: whitesmoke;
-        background: rgb(0, 0, 0);
+        background: $secondary-color;
         border: none;
         border-radius: 10px;
         font-weight: 500;
         cursor: pointer;
 
+        @include mobile {
+          display: none;
+      }
+
         &:hover{
           transform: scale(1.2);
           transition: all 1s ease-in;
           transition: all 1s ease-out;
+
 
         }
 
