--- a/src/components/Proj/Proj.scss
+++ b/src/components/Proj/Proj.scss
@@ -1,7 +1,7 @@
 @import '../../global.scss';
 
 .projects {
-  background-color: $main-color;
+  background-color: $secondary-color;
   display: flex;
   align-items: center;
   justify-content: content;
@@ -41,12 +41,13 @@
     transition: all 1s ease-out;
 
     @include mobile{
-      height: 100vh;
+      height: 120vh;
       flex-direction: column;
       justify-content: center;
     }
 
     .container {
+      height: 100%;
       width: 100vw;
       display: flex;
       align-items: center;
@@ -56,7 +57,7 @@
         width: 720px;
         height:100%;
         background-color: white;
-        border-radius: 20px;
+        border-radius: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -64,7 +65,7 @@
         @include mobile{
           width: 70%;
           height: 100px;
-          margin: 5px 0;
+          margin: 10px 0;
         }
 
         .left{
@@ -73,6 +74,8 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          padding: 4px 6px;
+          
 
           .leftContainer {
             width: 90%;
@@ -83,7 +86,7 @@
 
             
             @include mobile{
-              width: 100%;
+              width: 50vw;
               height: 100%;
             }
 
@@ -91,7 +94,7 @@
               width: 40px;
               height: 40px;
               border-radius: 50%;
-              background-color:rgb(255, 202, 136);
+              background-color: $main-color;
               display: flex;
               align-items: center;
               align-content: center;
@@ -116,13 +119,15 @@
 
           h4{
             font-size: 20px;
+
             @include mobile{
-              font-size: 13px;
+              font-size: 10px;
             }
           }
 
           p{
             font-size: 13px;
+
             @include mobile{
               display: none;
             }
@@ -130,7 +135,7 @@
           }
           .span{
             @include mobile{
-             font-size: 9px;
+            font-size: 5px;
             }
           }
 
@@ -157,7 +162,7 @@
         .right{
           flex: 8;
           height: 100%;
-          background-color: rgb(247,148,29);
+          background-color: $main-color;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -166,6 +171,11 @@
               width: auto;
               height: 350px;
               // transform: rotate(-10deg);
+
+              @include mobile {
+                width: auto;
+                height: 130px;
+              }
             }
 
         }
