--- a/src/App.scss
+++ b/src/App.scss
@@ -6,8 +6,8 @@
     height: calc(100vh - 70px);
     background-color: rgb(255, 255, 255);
     position: relative;
-    top:70px;
-    scroll-behavior: smooth;
+    // top:70px;
+    // scroll-behavior: smooth;
     z-index: 2;
     scroll-snap-type: y mandatory;
     // for firefox
