--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -14,9 +14,8 @@
     overflow: hidden;
 
     .imgContainer {
-      margin-top: 10px;
-      width: 500px;
-      height: 500px;
+      width: 550px;
+      height: 550px;
       background-color: $main-color;
       border-radius: 50%;
       display: flex;
@@ -63,7 +62,7 @@
         font-family: 'Poppins', sans-serif;
         color: rgb(6, 62, 105);
         margin: 10px 0;
-        font-weight: 900;
+        font-weight: 800;
 
         @include mobile{
           font-size: 40px;
@@ -108,17 +107,17 @@
       bottom: 10px;
       left: 40%;
 
-      @include mobile {
-        display: none;
-      }
+      // @include mobile {
+      //   display: none;
+      // }
 
       .fas{
         width: 30px;
-        color: #130e0e;
+        color: $secondary-color;
         animation: arrowBlink 1s infinite;
 
         @include mobile {
-          display: none;
+          height: auto;
         }
       }
 
