--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   width: 100%;
-  height: 80px;
+  height: 75px;
   background-color: white;
   color: $main-color;
   position: fixed;
@@ -19,10 +19,11 @@
     .left{
       display: flex;
       align-items: center;
+      padding-right: 65rem;
       
       .logo {
-        font-size: 35px;
-        font-weight: 900;
+        font-size: 25px;
+        font-weight: 800;
         text-decoration: none;
         color: inherit;
         margin-right: 40px;
@@ -48,7 +49,7 @@
     .right {
       .harmburger {
         width: 32px;
-        height: 25px;
+        height: 20px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
