--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -1,7 +1,7 @@
 @import '../../global.scss';
 
 .portfolio {
-  margin-top: 4rem;
+  // margin-top: 4rem;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,7 @@
   }
 
   ul{
-    margin: 10px;
+    // margin: 10px;
     padding: 0;
     list-style: none;
     display: flex;
